--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "legacy-aptos-sdk",
-  "description": "Legacy Aptos SDK",
+  "name": "supra-l1-sdk-core",
+  "description": "Core of the Supra-L1-SDK",
   "packageManager": "pnpm@8.3.1",
   "license": "Apache-2.0",
   "engines": {
@@ -20,62 +20,49 @@
     "prepack": "pnpm build",
     "build": "pnpm build:clean && pnpm _build:node && pnpm _build:browser",
     "build:clean": "rm -rf dist",
-    "_build:browser": "tsup --platform browser --format iife --global-name aptosSDK --minify",
+    "_build:browser": "tsup --platform browser --format iife --global-name supra_l1_sdk_core --minify",
     "_build:node": "tsup --platform node --format cjs,esm --dts",
     "lint": "eslint \"**/*.ts\"",
-    "test": "pnpm run publish-ans-contract && jest",
-    "test:ci": "pnpm run publish-ans-contract && jest --testPathIgnorePatterns=indexer.test.ts",
-    "test:indexer": "jest --collectCoverageFrom='./src/tests/e2e/indexer.test.ts' -- ./src/tests/e2e/indexer.test.ts",
-    "_fmt": "prettier 'scripts/**/*.ts' 'src/**/*.ts' 'examples/**/*.js' 'examples/**/*.ts' '.eslintrc.js'",
+    "test": "jest",
+    "test:ci": "jest --testPathIgnorePatterns=indexer.test.ts",
+    "_fmt": "prettier 'src/**/*.ts' '.eslintrc.js'",
     "fmt": "pnpm _fmt --write",
     "fmt:check": "pnpm _fmt --check",
     "cov:clean": "rm -rf coverage",
-    "generate-client": "openapi -i ../../../api/doc/spec.yaml -o ./src/generated --exportCore=false --exportServices=false",
-    "checked-publish": "scripts/checked_publish.sh",
-    "generate-ts-docs": "scripts/generate_ts_docs.sh",
-    "indexer-codegen": "graphql-codegen --config ./src/indexer/codegen.yml",
-    "publish-ans-contract": "ts-node ./scripts/publish_ans_contract.ts"
+    "generate-client": "openapi -i ../../../api/doc/spec.yaml -o ./src/generated --exportCore=false --exportServices=false"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/aptos-labs/aptos-core.git"
-  },
-  "homepage": "https://github.com/aptos-labs/aptos-core",
-  "bugs": {
-    "url": "https://github.com/aptos-labs/aptos-core/issues"
-  },
-  "author": "aptoslabs.com",
+  "author": "supra.com",
   "keywords": [
-    "Aptos",
-    "Aptos Labs",
+    "Supra",
+    "Supra Network",
+    "Supra Labs",
     "Move"
   ],
   "dependencies": {
-    "@aptos-labs/aptos-client": "^0.1.0",
-    "eventemitter3": "^5.0.1",
     "@noble/hashes": "1.3.3",
     "@scure/bip39": "1.2.1",
+    "eventemitter3": "^5.0.1",
     "form-data": "4.0.0",
     "tweetnacl": "1.0.3"
   },
   "devDependencies": {
-    "@babel/traverse": "^7.23.6",
-    "@graphql-codegen/cli": "^5.0.0",
+    "@babel/traverse": "^7.27.0",
+    "@graphql-codegen/cli": "^5.0.5",
     "@graphql-codegen/import-types-preset": "^3.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-graphql-request": "^6.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
+    "@graphql-codegen/typescript-operations": "^4.6.0",
     "@types/jest": "29.5.11",
     "@types/node": "20.10.4",
     "@typescript-eslint/eslint-plugin": "6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "dotenv": "16.3.1",
     "eslint": "8.55.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.0",
-    "graphql": "^16.8.1",
+    "graphql": "^16.10.0",
     "graphql-request": "6.1.0",
     "graphql-tag": "^2.12.6",
     "jest": "29.7.0",
@@ -87,9 +74,9 @@
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
     "tsup": "8.0.1",
-    "typedoc": "^0.25.4",
+    "typedoc": "^0.25.13",
     "typescript": "5.3.3",
-    "webpack": "^5.89.0"
+    "webpack": "^5.99.5"
   },
-  "version": "1.22.0"
+  "version": "2.0.0"
 }
