--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "supra-l1-sdk-core",
+  "version": "2.0.0",
   "description": "Core of the Supra-L1-SDK",
   "packageManager": "pnpm@8.3.1",
   "license": "Apache-2.0",
@@ -17,7 +18,7 @@
     }
   },
   "scripts": {
-    "prepack": "pnpm build",
+    "prepare": "pnpm build",
     "build": "pnpm build:clean && pnpm _build:node && pnpm _build:browser",
     "build:clean": "rm -rf dist",
     "_build:browser": "tsup --platform browser --format iife --global-name supra_l1_sdk_core --minify",
@@ -77,6 +78,5 @@
     "typedoc": "^0.25.13",
     "typescript": "5.3.3",
     "webpack": "^5.99.5"
-  },
-  "version": "2.0.0"
+  }
 }
