--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "supra-l1-sdk-core",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Core of the Supra-L1-SDK",
   "packageManager": "pnpm@8.3.1",
   "license": "Apache-2.0",
@@ -25,12 +25,10 @@
     "_build:node": "tsup --platform node --format cjs,esm --dts",
     "lint": "eslint \"**/*.ts\"",
     "test": "jest",
-    "test:ci": "jest --testPathIgnorePatterns=indexer.test.ts",
     "_fmt": "prettier 'src/**/*.ts' '.eslintrc.js'",
     "fmt": "pnpm _fmt --write",
     "fmt:check": "pnpm _fmt --check",
-    "cov:clean": "rm -rf coverage",
-    "generate-client": "openapi -i ../../../api/doc/spec.yaml -o ./src/generated --exportCore=false --exportServices=false"
+    "cov:clean": "rm -rf coverage"
   },
   "author": "supra.com",
   "keywords": [
@@ -42,19 +40,9 @@
   "dependencies": {
     "@noble/hashes": "1.3.3",
     "@scure/bip39": "1.2.1",
-    "eventemitter3": "^5.0.1",
-    "form-data": "4.0.0",
     "tweetnacl": "1.0.3"
   },
   "devDependencies": {
-    "@babel/traverse": "^7.27.0",
-    "@graphql-codegen/cli": "^5.0.5",
-    "@graphql-codegen/import-types-preset": "^3.0.0",
-    "@graphql-codegen/typescript": "^4.1.6",
-    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
-    "@graphql-codegen/typescript-operations": "^4.6.0",
-    "@types/jest": "29.5.11",
-    "@types/node": "20.10.4",
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "^6.21.0",
     "dotenv": "16.3.1",
@@ -63,20 +51,12 @@
     "eslint-config-airbnb-typescript": "17.1.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.0",
-    "graphql": "^16.10.0",
-    "graphql-request": "6.1.0",
-    "graphql-tag": "^2.12.6",
     "jest": "29.7.0",
-    "json5": "^2.2.3",
-    "openapi-typescript-codegen": "https://github.com/aptos-labs/openapi-typescript-codegen/releases/download/v0.24.0-p1/openapi-typescript-codegen-v0.24.0-p1.tgz",
     "prettier": "3.1.1",
-    "semver": "^6.3.1",
     "ts-jest": "29.1.1",
-    "ts-loader": "9.5.1",
-    "ts-node": "10.9.2",
+    "@types/jest": "30.0.0",
+    "@types/node": "24.1.0",
     "tsup": "8.0.1",
-    "typedoc": "^0.25.13",
-    "typescript": "5.3.3",
-    "webpack": "^5.99.5"
+    "typescript": "5.3.3"
   }
 }
